# Ipanema

./: README.md  main.py  pyproject.toml
ipanema/config/: config.py
ipanema/core/: __init__.py  core.py
ipanema/input/: __init__.py  input_plugin.py
ipanema/input/implementations/: user_input.py
ipanema/model/: __init__.py  model_plugin.py
ipanema/model/implementations/: signal_peak_model.py
ipanema/output/: output_plugin.py
ipanema/output/implementations/: command_line_output.py
sdk/cuda_manager/: __init__.py  abstract_cuda_manager.py
sdk/cuda_manager/cuda_function/: cuda_function.py
sdk/cuda_manager/implementations/: auto_cuda_manager.py
src/: main.py
src/ipanema/: exceptions.py
src/ipanema/config/: config.py
src/ipanema/core/: __init__.py  core.py
src/ipanema/input/: __init__.py  input_plugin.py
src/ipanema/input/implementations/: default_input.py  signal_peak_input.py  user_input.py
src/ipanema/model/: __init__.py  model_plugin.py
src/ipanema/model/implementations/: default_model.py  signal_peak_model.py
src/ipanema/output/: __init__.py  output_plugin.py
src/sdk/: __init__.py
src/sdk/cuda_manager/: __init__.py  abstract_cuda_manager.py  cuda_program.py
tests/test_ipanema/test_core/: test_core.py
tests/test_ipanema/test_input/: test_default_input.py  test_input_plugin.py
tests/test_ipanema/test_model/: test_default_model.py  test_model_plugin.py
tests/test_ipanema/test_output/: test_command_line_output.py  test_output_plugin.py
tests/test_sdk/test_cuda_manager/: test_cuda_manager.py  test_pycuda_cuda_manager.py
(+14 files in other folders)
