[project]
name = "ipanema"
version = "0.1.0"
dependencies = [
  "numpy",
  "pycuda",
  "iminuit",
  "pytest",
  "reikna"
]
requires-python = ">= 3.10"
authors = [
  {name= "Gabriel Fernandez", email= "gabriel.fernandez1@udc.es"}
]
maintainers = [
  {name= "Gabriel Fernandez", email= "gabriel.fernandez1@udc.es"}
]
readme = {file = "README.txt", content-type = "text/markdown"}